--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^4.0.0",
     "style-loader": "^1.0.0",
     "styled-jsx": "^3.2.4",
+    "uuid": "^3.2.1",
     "webpack": "^3.4.0",
     "webpack-dev-server": "^2.5.0"
   },
